add swagger for user and update some routs
