# swagger.json
@@ -19,7 +19,8 @@
   },
   "servers": [
     {
-      "url": "https://petstore3.swagger.io/api/v3"
+      "url": "http://localhost:3000/",
+      "description": "Local server"
     }
   ],
   "tags": [
@@ -154,7 +155,7 @@
         },
         "security": [
           {
-            "petstore_auth": [
+            "checkAuthUser": [
               "write:product",
               "read:product"
             ]
@@ -262,19 +263,19 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "type":"string",
-                  "$ref":"#/components/schemas/product"
+                  "type": "string",
+                  "$ref": "#/components/schemas/product"
                 }
               }
             }
           },
-          "400":{
-            "description":"Bad request",
-            "content":{
-              "application/json":{
-                "schema":{
-                  "type":"string",
-                  "$ref":"#/components/schemas/product"
+          "400": {
+            "description": "Bad request",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "string",
+                  "$ref": "#/components/schemas/product"
                 }
               }
             }
@@ -310,7 +311,7 @@
         },
         "security": [
           {
-            "api_key": []
+            "x-access-token": []
           }
         ]
       }
@@ -432,14 +433,14 @@
         }
       }
     },
-    "/user": {
+    "/api/user/signup": {
       "post": {
         "tags": [
           "user"
         ],
         "summary": "Create user",
-        "description": "This can only be done by the logged in user.",
-        "operationId": "createUser",
+        "description": "This can only be done by making registarion.",
+        "operationId": "SignUp",
         "requestBody": {
           "description": "Created user object",
           "content": {
@@ -461,6 +462,31 @@
           }
         },
         "responses": {
+          "200": {
+            "description": "You have been successfully registered",
+            "headers": {},
+            "content": {
+              "application/xml": {
+                "schema": {
+                  "type": "string"
+                }
+              },
+              "application/json": {
+                "schema": {
+                  "type": "string"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Error"
+          },
+          "409": {
+            "description": "User is already exists"
+          },
+          "403": {
+            "description": "please try another passowrd"
+          },
           "default": {
             "description": "successful operation",
             "content": {
@@ -479,95 +505,41 @@
         }
       }
     },
-    "/user/createWithList": {
+    "/api/user/signin": {
       "post": {
         "tags": [
           "user"
         ],
-        "summary": "Creates list of users with given input array",
-        "description": "Creates list of users with given input array",
-        "operationId": "createUsersWithListInput",
+        "summary": "Logs user into the system",
+        "description": "",
+        "operationId": "SignIn",
+        "parameters": [
+
+        ],
         "requestBody": {
+          "description": "signIn",
           "content": {
             "application/json": {
               "schema": {
-                "type": "array",
-                "items": {
-                  "$ref": "#/components/schemas/User"
-                }
+                "$ref": "#/components/schemas/SignIn"
+              }
+            },
+            "application/xml": {
+              "schema": {
+                "$ref": "#/components/schemas/SignIn"
+              }
+            },
+            "application/x-www-form-urlencoded": {
+              "schema": {
+                "$ref": "#/components/schemas/SignIn"
               }
             }
           }
         },
         "responses": {
           "200": {
-            "description": "Successful operation",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/User"
-                }
-              },
-              "application/xml": {
-                "schema": {
-                  "$ref": "#/components/schemas/User"
-                }
-              }
-            }
-          },
-          "default": {
-            "description": "successful operation"
-          }
-        }
-      }
-    },
-    "/user/login": {
-      "get": {
-        "tags": [
-          "user"
-        ],
-        "summary": "Logs user into the system",
-        "description": "",
-        "operationId": "loginUser",
-        "parameters": [
-          {
-            "name": "username",
-            "in": "query",
-            "description": "The user name for login",
-            "required": false,
-            "schema": {
-              "type": "string"
-            }
-          },
-          {
-            "name": "password",
-            "in": "query",
-            "description": "The password for login in clear text",
-            "required": false,
-            "schema": {
-              "type": "string"
-            }
-          }
-        ],
-        "responses": {
-          "200": {
             "description": "successful operation",
-            "headers": {
-              "X-Rate-Limit": {
-                "description": "calls per hour allowed by the user",
-                "schema": {
-                  "type": "integer",
-                  "format": "int32"
-                }
-              },
-              "X-Expires-After": {
-                "description": "date in UTC when token expires",
-                "schema": {
-                  "type": "string",
-                  "format": "date-time"
-                }
-              }
-            },
+            "headers": {},
             "content": {
               "application/xml": {
                 "schema": {
@@ -587,35 +559,28 @@
         }
       }
     },
-    "/user/logout": {
-      "get": {
+    "/api/user/deleteuser/{id}": {
+      "delete": {
         "tags": [
           "user"
         ],
-        "summary": "Logs out current logged in user session",
+        "summary": "Logs out current logged in user session and remove frm database",
         "description": "",
-        "operationId": "logoutUser",
-        "parameters": [],
-        "responses": {
-          "default": {
-            "description": "successful operation"
-          }
-        }
-      }
-    },
-    "/user/{username}": {
-      "get": {
-        "tags": [
-          "user"
-        ],
-        "summary": "Get user by user name",
-        "description": "",
-        "operationId": "getUserByName",
+        "operationId": "deleteUser",
         "parameters": [
           {
-            "name": "username",
+            "name": "x-access-token",
+            "in": "header",
+            "description": "",
+            "required": false,
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "id",
             "in": "path",
-            "description": "The name that needs to be fetched. Use user1 for testing. ",
+            "description": "user id to delete",
             "required": true,
             "schema": {
               "type": "string"
@@ -623,41 +588,39 @@
           }
         ],
         "responses": {
-          "200": {
-            "description": "successful operation",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/User"
-                }
-              },
-              "application/xml": {
-                "schema": {
-                  "$ref": "#/components/schemas/User"
-                }
-              }
-            }
-          },
-          "400": {
-            "description": "Invalid username supplied"
-          },
-          "404": {
-            "description": "User not found"
+          "default": {
+            "description": "successful operation"
           }
-        }
-      },
+        },
+        "security": [
+          {
+            "x-access-token": []
+          }
+        ]
+      }
+    },
+    "/api/user/updateuserinfo/{id}": {
       "put": {
         "tags": [
           "user"
         ],
-        "summary": "Update user",
-        "description": "This can only be done by the logged in user.",
-        "operationId": "updateUser",
+        "summary": "update user by user id",
+        "description": "",
+        "operationId": "UpdateUserInfo",
         "parameters": [
           {
-            "name": "username",
+            "name": "id",
             "in": "path",
-            "description": "name that need to be deleted",
+            "description": "The name that needs to be fetched. Use id for testing. ",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "x-access-token",
+            "in": "header",
+            "description": "",
             "required": true,
             "schema": {
               "type": "string"
@@ -665,52 +628,43 @@
           }
         ],
         "requestBody": {
-          "description": "Update an existent user in the store",
+          "description": "Created user object",
           "content": {
             "application/json": {
               "schema": {
-                "$ref": "#/components/schemas/User"
+                "$ref": "#/components/schemas/UserUpdate"
               }
             },
             "application/xml": {
               "schema": {
-                "$ref": "#/components/schemas/User"
+                "$ref": "#/components/schemas/UserUpdate"
               }
             },
             "application/x-www-form-urlencoded": {
               "schema": {
-                "$ref": "#/components/schemas/User"
+                "$ref": "#/components/schemas/UserUpdate"
               }
             }
           }
         },
         "responses": {
-          "default": {
-            "description": "successful operation"
-          }
-        }
-      },
-      "delete": {
-        "tags": [
-          "user"
-        ],
-        "summary": "Delete user",
-        "description": "This can only be done by the logged in user.",
-        "operationId": "deleteUser",
-        "parameters": [
-          {
-            "name": "username",
-            "in": "path",
-            "description": "The name that needs to be deleted",
-            "required": true,
-            "schema": {
-              "type": "string"
+          "200": {
+            "description": "User Updated!",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/UserUpdate"
+                }
+              },
+              "application/xml": {
+                "schema": {
+                  "$ref": "#/components/schemas/UserUpdate"
+                }
+              }
             }
-          }
-        ],
-        "responses": {
+          },
           "400": {
-            "description": "Invalid username supplied"
+            "description": "Invalid id supplied"
           },
           "404": {
             "description": "User not found"
@@ -814,7 +768,7 @@
         },
         "security": [
           {
-            "api_key": []
+            "x-access-token": []
           },
           {
             "petstore_auth": [
@@ -1026,40 +980,70 @@
       "User": {
         "type": "object",
         "properties": {
-          "id": {
-            "type": "integer",
-            "format": "int64",
-            "example": 10
-          },
-          "username": {
+          "UserName": {
             "type": "string",
             "example": "theUser"
           },
-          "firstName": {
-            "type": "string",
-            "example": "John"
-          },
-          "lastName": {
-            "type": "string",
-            "example": "James"
-          },
-          "email": {
+          "Email": {
             "type": "string",
             "example": "john@email.com"
           },
-          "password": {
+          "Password": {
             "type": "string",
             "example": "12345"
           },
-          "phone": {
+          "PhoneNumber": {
             "type": "string",
             "example": "12345"
           },
-          "userStatus": {
-            "type": "integer",
-            "description": "User Status",
-            "format": "int32",
-            "example": 1
+          "Address": {
+            "type": "string",
+            "example": "jordan"
+          },
+          "IsAdmin": {
+            "type": "bool",
+            "description": "is user admin",
+            "example": true
+          }
+        },
+        "xml": {
+          "name": "user"
+        }
+      },
+      "SignIn": {
+        "type": "object",
+        "properties": {
+          "Email": {
+            "type": "string",
+            "example": "john@email.com"
+          },
+          "Password": {
+            "type": "string",
+            "example": "12345"
+          }
+        },
+        "xml": {
+          "name": "user"
+        }
+      },
+      "UserUpdate": {
+        "type": "object",
+        "properties": {
+          "UserName": {
+            "type": "string",
+            "example": "theUserUpdate"
+          },
+          "Password": {
+            "type": "string",
+            "example": "12345"
+          },
+          "PhoneNumber": {
+            "type": "string",
+            "example": "12345333"
+          },
+          "Address": {
+            "type": "string",
+            "example": "jordan-irbid"
           }
         },
         "xml": {
@@ -1077,14 +1061,26 @@
             "type": "string"
           }
         },
+        "required": [
+          "UserName",
+          "Password",
+          "Email",
+          "PhoneNumber",
+          "Address",
+          "IsAdmin"
+        ],
         "xml": {
           "name": "tag"
         }
       },
       "Pet": {
         "required": [
-          "name",
-          "photoUrls"
+          "UserName",
+          "Password",
+          "Email",
+          "PhoneNumber",
+          "Address",
+          "IsAdmin"
         ],
         "type": "object",
         "properties": {
@@ -1185,23 +1181,15 @@
       }
     },
     "securitySchemes": {
-      "petstore_auth": {
-        "type": "oauth2",
-        "flows": {
-          "implicit": {
-            "authorizationUrl": "https://petstore3.swagger.io/oauth/authorize",
-            "scopes": {
-              "write:pets": "modify pets in your account",
-              "read:pets": "read your pets"
-            }
-          }
-        }
-      },
-      "api_key": {
+      "checkAuthUser": {
         "type": "apiKey",
-        "name": "api_key",
-        "in": "header"
+        "flows": {}
       }
+    },
+    "x-access-token": {
+      "type": "apiKey",
+      "name": "x-access-token",
+      "in": "header"
     }
   }
 }
